[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devsecops-agent"
version = "1.4.0"
description = "DevSecOps scanning CLI for local use, CI pipelines, and future editor integrations."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Praveen Jakku" }
]
keywords = ["devsecops", "security", "sast", "semgrep", "cli", "ci"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities",
]
dependencies = [
  "PyYAML>=6.0.1,<7.0.0",
  "typer>=0.12.3,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2,<2.0.0",
  "pyinstaller>=6.10.0,<7.0.0",
  "pytest>=8.0.0,<9.0.0",
]

[project.scripts]
devsecops-agent = "devsecops_agent.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["devsecops_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
